<resources>
    <string name="menu_budget">Budget</string>
    <string name="menu_budget2">BUDGET NOT SET</string>
    <string name="menu_rate">Rate Aplikasi ini</string>
    <string name="menu_install">Install Aplikasi Lainnya</string>
    <string name="menu_backup">Backup Database</string>
    <string name="menu_restore">Restore Database</string>
    <string name="copyright">Copyright \u00a9 RestuIbu</string>
    <string name="app_name">Atur Duit</string>
    <string name="e_price">Harga</string>
    <string name="e_desc">Deskripsi</string>
    <string name="e_kategori">Kategori</string>
    <string name="btn_save">Save</string>
    <string name="btn_reset">Reset</string>
    <string name="Riwayat">Riwayat</string>
    <string name="title_activity_detail_history">DetailHistoryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_back">Kembali</string>
    <string name="btn_search">Cari</string>
    <string name="title_activity_blank">Tidak tersedia</string>
    <string name="title1">Tanggal</string>
    <string name="time">Jam</string>
    <string name="jam">Jam</string>
    <string name="kategori1">Makanan dan minuman</string>
    <string name="kategori2">Transportasi</string>
    <string name="kategori3">Hiburan</string>
    <string name="kategori4">Belanjaan</string>
    <string name="kategori5">Lainnya</string>
    <string name="kategori6">Hutang</string>
    <string name="kategori7">ZIS</string>
    <string name="titikdua">:</string>
    <string name="title2">Total</string>
    <string name="title3">Transaksi</string>
    <string name="title4">Kategori</string>
    <string name="splash">Splash</string>
    <string name="RiwayatBudget">Riwayat Budget</string>
    <string name="title_add">Masukkan transaksi Anda</string>
    <string name="ID">ID</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="image_desc">Image Description</string>
    <string name="action_about">Tentang</string>
    <string name="action_signout">Sign Out</string>
    <string name="sort_category">Berdasarkan kategori:</string>
    <string name="Clock">Jam</string>
    <string name="Date">Tanggal</string>
    <string name="email">Sign In with email</string>
    <string name="Price">Harga</string>
    <string name="Simpan">Simpan</string>
    <string name="Ulangi">Ulangi</string>
    <string name="ATUR_DUIT_WIDGET">ATUR DUIT WIDGET</string>
    <string name="Sisabudget">Sisa budget</string>
    <string name="Mulai">Mulai</string>
    <string name="Berakhir">Berakhir</string>
    <string name="Description">Deskripsi</string>
    <string name="infoimport1">Pastikan file database berada di folder root.\n\nMudahnya, file database harus berada di direktori saat pertama masuk ke File Explorer/Manager</string>
    <string name="RestoreDatabase">Restore Database</string>
    <string name="SetBudget">Set Budget</string>
    <string name="AmountBudget">Masukkan Nominal</string>
    <string name="TanggalMulai">Tanggal Mulai</string>
    <string name="TanggalBerakhir">Tanggal Berakhir</string>
    <string name="TotalBudget">Total Budget</string>
    <string name="TambahAlarm">Tambah alarm</string>
    <string name="Statistik">Grafik</string>
    <string name="Tambah">Tambah</string>
    <string name="menuBackup">Backup database secara:</string>
    <string name="Online">Online</string>
    <string name="Offline">Offline</string>
    <string name="Total">Total</string>
    <string name="TambahTransaksi">Tambah Transaksi</string>
    <string name="Harga">Harga</string>
    <string name="Deskripsi">Deskripsi</string>
    <string name="info_copyright">Copyright © 2018 by Restu Ibu\nAtur Duit 1.2</string>
    <string name="banner_ad_unit_id">ca-app-pub-6657666130252014/7859784872</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6657666130252014/8402680470</string>
    <string name="about">Restu Ibu rilis aplikasi lagi nih, namanya Atur Duit (remake dari Cost Tracker).
Sesuai dengan namanya tujuan aplikasi ini yaitu untuk membantu kita mengatur pengeluaran yang dilakukan.\n
Fitur yang dimiliki adalah\n\n
1. Menambah/mengubah/menghapus transaksi yang dilakukan baik transaksi yang dilakukan sebelumnya, sekarang, maupun yang akan datang.\n
2. Menampilkan riwayat transaksi yang telah dilakukan.\n
3. Menampilkan riwayat budget yang telah dilakukan.\n
4. Menampilkan grafik pengeluaran berdasarkan harian, bulanan, dan tahunan.\n
5. Mengatur jumlah anggaran/budget berdasarkan mingguan dan bulanan.\n
6. Widget sisa budget bisa di home/lockscreen\n
7. Authentikasi dengan Google Sign In\n
8. Backup dan Restore database dari Cloud\n\n

Semoga aplikasi ini bermanfaat.
    </string>
    <string name="Oke">Oke</string>
    <string name="Batal">Batal</string>
    <string name="IncreaseBudget">Penambahan</string>
    <string name="DecreaseBudget">Pengurangan</string>
    <string name="Edit">Ubah</string>
    <string name="Delete">Hapus</string>
    <string name="TglMulai">Tgl Mulai</string>
    <string name="TglAkhir">Tgl Akhir</string>
    <string name="Kategori">Kategori</string>
    <string name="Sisa">Sisa</string>
    <string name="release_code_22">
        Apa yang baru di <b>Atur Duit 1.1</b>?\n
        1. <b>Integrasi ke Firebase\n</b>
        2. <b>Login dengan Google\n</b>
        3. <b>Backup database ke cloud\n</b>
        4. <b>Restore database dari cloud\n</b>

    </string>
    <string name="release_code_25">
        Apa yang baru di <b>Atur Duit 1.2</b>?\n
        1. <b>Tambahan kategori transaksi\n</b>
        2. <b>Tambahan fitur jam pengingat\n</b>
        3. <b>Sisa budget muncul di ActionBar\n</b>
    </string>
    <string-array name="category_array">
        <item>Pilih kategori:</item>
        <item>Mingguan</item>
        <item>Bulanan</item>
    </string-array>
    <string-array name="statistic_array">
        <item>Pilih waktu:</item>
        <item>Harian</item>
        <item>Bulanan</item>
        <item>Tahunan</item>
    </string-array>
    <string-array name="option_chart_array">
        <item>Pilih chart:</item>
        <item>Bar Chart</item>
        <item>Line Chart</item>
    </string-array>
    <string-array name="budget_array">
        <item>Pilih kategori:</item>
        <item>Mingguan</item>
        <item>Bulanan</item>
        <item>Mingguan dan bulanan</item>
    </string-array>
    <string-array name="editBudget_array">
        <item>Pilih yang akan diubah:</item>
        <item>Total Budget</item>
        <item>Sisa Budget</item>
        <item>Keduanya</item>
    </string-array>
    <string name="title_activity_history_and_statistic_budget">HistoryAndStatisticBudgetActivity</string>
    <string name="title_activity_about">Tentang</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="info_reference">Some icons made by Freepik from www.flaticon.com</string>
    <string name="default_web_client_id2">1017980932850-4829oogi9t6hp9u816b7ejj9pn1eb647.apps.googleusercontent.com</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="option_restore_db">Restore Database</string>
    <string name="option_backup_db">Backup Database</string>
    <string name="option_reminder">Reminder</string>
    <string name="option_reminder2">Atur Pengingat</string>
    <string name="reminder_title1">Atur Duit Pagi</string>
    <string name="reminder_title2">Atur Duit Siang</string>
</resources>