<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/splash_2" />

        <TextView
            android:layout_margin="@dimen/layout_margin_small"
            android:id="@+id/status"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="@dimen/layout_margin_small2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24dp"
                android:text="1.3"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInButton"
                android:layout_margin="@dimen/layout_margin_small2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                tools:visibility="gone" />




            <TextView
                android:visibility="gone"
                android:layout_marginTop="@dimen/layout_margin_small2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_code_25"/>

            <!--<Button-->
                <!--android:id="@+id/emailSignInButton"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:drawableLeft="@mipmap/ic_mail"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingRight="10dp"-->
                <!--android:textSize="6pt"-->
                <!--android:textColor="@color/white"-->
                <!--android:textStyle="bold"-->
                <!--android:background="@drawable/layout_handle_emailsignin"-->
                <!--android:text="@string/email" />-->

        </LinearLayout>


        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            tools:text="Firebase User ID: 123456789abc" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="1">



        <LinearLayout
            android:id="@+id/signOutAndDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out" />

            <Button
                android:id="@+id/disconnectButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disconnect" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>